<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/crudEmpleado"
                android:text="Ingrese sus Datos"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="Ingrese su cedula "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtcedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/cedula"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:text="Ingrese su nombre:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="Ingrese su apellido"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="Ingrese su direciòn"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtdireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/direccion"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="Ingrese su Estado Civil"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEstadoCi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:ems="10"
                android:hint="@string/estadocivil"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnInsertar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/btnInsertar"
                    android:text="Insertar" />

                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:hint="@string/btnBuscar"
                    android:text="Buscar" />

                <Button
                    android:id="@+id/btnActualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/btnActualizar"
                    android:text="ACTUALIZAR" />

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/btnEditar"
                    android:text="Editar" />

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/btnEliminar"
                    android:text="Eliminar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>